add o logo no cabecalho

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>arte e luta</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1><img src="LOGOTIPO.png" alt="logotipo"></h1>
+    </header>
 </body>
 </html>
