--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
     <header>
         <h1><img src="LOGOTIPO.png" alt="logotipo"></h1>
+        <ul>
+            <a href="">xxxx</a>
+            <a href="">xxxx</a>
+            <a href="">xxxx</a>
+        </ul>
     </header>
 </body>
 </html>
