--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>arte e luta</title>
 </head>
 
 <body>
     <header>
-        <h1><img src="LOGOTIPO.png" alt="logotipo"></h1>
+        <h1><img class="logo" src="LOGOTIPO.png" alt="logotipo"></h1>
         <ul>
             <a href="">xxxx</a>
             <a href="">xxxx</a>
             <a href="">xxxx</a>
+            <a href="">xxxx</a>
+            <a href="">xxxx</a>
+            <a href="">xxxx</a>
+
         </ul>
     </header>
 </body>
